--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -221,7 +221,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="MESSAGE PELANGGAN" />
+                android:text="MESSAGE PELANGGAN"
+                android:visibility="gone"/>
 
             <TableLayout
                 android:layout_width="match_parent"
