--- a/app/src/main/res/layout/activity_atur_discount_layanan_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_layanan_.xml
@@ -119,7 +119,7 @@
                     android:layout_weight="6"
                     android:background="@drawable/background_edittext">
 
-                    <com.rkrzmail.srv.MultiSelectionSpinner
+                    <Spinner
                         android:id="@+id/sp_pekerjaan_discLayanan"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -184,6 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:visibility="gone"
                 android:text="MESSAGE PELANGGAN" />
 
             <TableLayout
