--- a/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
+++ b/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
@@ -285,6 +285,21 @@
 
         </LinearLayout>
 
+            <TextView
+                android:id="@+id/tv_timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:textColor="@color/grey_900"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/paddingSemiLarge"
+                android:layout_marginBottom="@dimen/paddingSemiLarge"
+                android:background="@drawable/background_edittext"
+                android:padding="10dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
