--- a/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
+++ b/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
@@ -172,18 +172,11 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_detail_part"
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical"
                 android:scrollingCache="true"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_detail_jasa"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                android:scrollingCache="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
